fix (sign-up): no vertical overflow

--- a/src/app/components/authentication/login/login.component.less
+++ b/src/app/components/authentication/login/login.component.less
@@ -1,7 +1,6 @@
 @import "../../../../common-variables.less";
 
 .content{
-  height: 100vh;
   display: flex;
   justify-content: end;
   align-items: center;
