--- a/src/app/components/authentication/sign-up/sign-up.component.less
+++ b/src/app/components/authentication/sign-up/sign-up.component.less
@@ -219,6 +219,10 @@ form{
   .content .right, .content .left {
     padding-top: 40px;
   }
+
+  .content .right {
+    height: calc(100% - 40px);
+  }
 }
 
 @media (max-height: 600px)
